--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ endif(EXAMPLE)
 
 add_compile_options(-std=c99 -Wall -Wextra -Oz -fshort-enums -ffunction-sections -fdata-sections -fno-unroll-loops)
 add_library(${PROJECT_NAME} src/meow.c)
+target_include_directories(meow PUBLIC inc/)
